// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mapWeaponToMessage > with an exclusive disciple 1`] = `
{
  "reply": {
    "embed": {
      "description": "Level 6 Sword, exclusive to Kurt",
      "fields": [
        {
          "name": "Skills",
          "value": "- **Armor Bane 1**: Deals more damage to Armored units.
- **Royal Focus**: Increases damage dealt by this weapon.
- 2 free skill slots",
        },
        {
          "name": "Stats",
          "value": "\`\`\`
Variant | Atk (-)  HP
────────┼────────────
HP      |  12  17  22
Atk     |  54  44  34
\`\`\`",
        },
      ],
      "title": "Royal Sword",
    },
  },
}
`;

exports[`mapWeaponToMessage > with skills 1`] = `
{
  "reply": {
    "embed": {
      "description": "Level 6 Sword",
      "fields": [
        {
          "name": "Skills",
          "value": "- **Armor Bane 1**: Deals more damage to Armored units.
- **Royal Focus**: Increases damage dealt by this weapon.
- 2 free skill slots",
        },
        {
          "name": "Stats",
          "value": "\`\`\`
Variant | Atk (-)  HP
────────┼────────────
HP      |  12  17  22
Atk     |  54  44  34
\`\`\`",
        },
      ],
      "title": "Royal Sword",
    },
  },
}
`;

exports[`mapWeaponToMessage > without optional skills 1`] = `
{
  "reply": {
    "embed": {
      "description": "Level 6 Sword",
      "fields": [
        {
          "name": "Skills",
          "value": "- 2 free skill slots",
        },
        {
          "name": "Stats",
          "value": "\`\`\`
Variant | Atk (-)  HP
────────┼────────────
HP      |  12  17  22
Atk     |  54  44  34
\`\`\`",
        },
      ],
      "title": "Royal Sword",
    },
  },
}
`;
